// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textAlignFirst renders 0 1`] = `
Array [
  .c0 {
  text-align-first: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders function 1`] = `
Array [
  .c0 {
  text-align-first: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders invalid theme path 1`] = `
Array [
  .c0 {
  text-align-first: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders negative number 1`] = `
Array [
  .c0 {
  text-align-first: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-align-first: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-align-first: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-align-first: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align-first: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align-first: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-align-first: July;
}

@media May {
  .c0 {
    text-align-first: August;
  }
}

@media April {
  .c0 {
    text-align-first: September;
  }
}

@media January {
  .c0 {
    text-align-first: November;
  }
}

@media April {
  .c0 {
    text-align-first: August;
  }
}

@media June {
  .c0 {
    text-align-first: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: July;
}

@media May {
  .c0 {
    text-align-first: August;
  }
}

@media April {
  .c0 {
    text-align-first: September;
  }
}

@media January {
  .c0 {
    text-align-first: November;
  }
}

@media April {
  .c0 {
    text-align-first: August;
  }
}

@media June {
  .c0 {
    text-align-first: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align-first: November;
  }
}

@media April {
  .c0 {
    text-align-first: January;
  }
}

@media January {
  .c0 {
    text-align-first: December;
  }
}

@media April {
  .c0 {
    text-align-first: April;
  }
}

@media June {
  .c0 {
    text-align-first: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align-first: November;
  }
}

@media April {
  .c0 {
    text-align-first: January;
  }
}

@media January {
  .c0 {
    text-align-first: December;
  }
}

@media April {
  .c0 {
    text-align-first: April;
  }
}

@media June {
  .c0 {
    text-align-first: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-align-first: July;
  }
}

@media April {
  .c0 {
    text-align-first: August;
  }
}

@media January {
  .c0 {
    text-align-first: September;
  }
}

@media April {
  .c0 {
    text-align-first: November;
  }
}

@media June {
  .c0 {
    text-align-first: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-align-first: July;
  }
}

@media April {
  .c0 {
    text-align-first: August;
  }
}

@media January {
  .c0 {
    text-align-first: September;
  }
}

@media April {
  .c0 {
    text-align-first: November;
  }
}

@media June {
  .c0 {
    text-align-first: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align-first: January;
  }
}

@media April {
  .c0 {
    text-align-first: December;
  }
}

@media January {
  .c0 {
    text-align-first: April;
  }
}

@media April {
  .c0 {
    text-align-first: May;
  }
}

@media June {
  .c0 {
    text-align-first: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align-first: January;
  }
}

@media April {
  .c0 {
    text-align-first: December;
  }
}

@media January {
  .c0 {
    text-align-first: April;
  }
}

@media April {
  .c0 {
    text-align-first: May;
  }
}

@media June {
  .c0 {
    text-align-first: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders postitive number 1`] = `
Array [
  .c0 {
  text-align-first: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders string 1`] = `
Array [
  .c0 {
  text-align-first: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlignFirst renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textAlignFirst renders valid theme path 1`] = `
Array [
  .c0 {
  text-align-first: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align-first: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
